# Digifly-Public

./: .dockerignore  .gitignore  README.md  START_HERE_Digifly_Phase2.ipynb  Start_Digifly_Phase2_Windows.bat  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: phase2-docker.yml
Phase 1/: Neuprint Token.example.txt  Phase 1.ipynb  README.md  filter_ids_by_size_and_export_swc.py  phase1_bridge.py
Phase 1/digifly_phase1/: __init__.py  choice_1_build_exports.py  choice_2_batch_filter_export.py  choice_3_metadata_template.py  choice_4_pathfinding.py  choice_5_glia_volume.py  choice_6_label_coverage.py  choice_7_proximity_scan.py  clients.py  menu.py  token_store.py  workflow_core.py
Phase 1/manc_v1.2.1/: README.md
Phase 2/: README.md
Phase 2/config/: structure_manifest.yaml
Phase 2/data/: Gap.mod  HeteroRectGap.mod  RectGap.mod
Phase 2/digifly/: __init__.py  generate_run_notebook.py
Phase 2/notebooks/: Digifly_Phase2_Workbench.ipynb  launch_browser_flow_visualizer.ipynb  run_simulation.ipynb
Phase 2/tests/: test_distributed_empty_rank_recording.py  test_distributed_save_merge.py  test_parallel_build_planning.py  test_repo_structure.py  test_requested_edge_sets.py  test_workbench_plans.py
Phase 3/: CLEANUP_DECISIONS.md  README.md  requirements.txt
Phase 3/configs/: phase3_clean_run_example.yaml  (+1 more)
docker/: Dockerfile.phase2  phase2_smoke_test.py  requirements-phase2.txt
docs/: hemilineage_experiment_feature_inventory.md  phase2_docker_setup.md  phase2_simulation_framework_audit.md  repo_structure.md
(+198 files in other folders)
